--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@docusaurus/preset-classic": "3.0.1",
     "@docusaurus/theme-classic": "^3.0.1",
     "@mdx-js/react": "^3.0.0",
+    "@scalar/api-reference": "^1.13.5",
     "@skyra/discord-components-react": "^3.6.1",
     "clsx": "^2.0.0",
     "global": "^4.4.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "veaury": "^2.3.12"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.1",
